--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@phosphor-icons/react": "^2.0.15",
     "axios": "^1.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
